[gd_scene load_steps=3 format=3 uid="uid://b6xcifh3d6swp"]

[ext_resource type="PackedScene" uid="uid://b04jabb3ses3s" path="res://Scenes/jt_nd.tscn" id="1_18ym5"]
[ext_resource type="Script" path="res://Scripts/jt_ai.gd" id="1_y42fm"]

[node name="JtAi" type="Node2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_y42fm")

[node name="Jt_nd" parent="." instance=ExtResource("1_18ym5")]
position = Vector2(1758, 540)

[node name="JtSpawn" type="Marker2D" parent="."]
position = Vector2(1756, 540)

[node name="JtEagerEdgeTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="JtEagerEdgeTimer" to="." method="_on_jt_eager_edge_timer_timeout"]
